# Cadenza

./: .gitignore  README.md  package-lock.json
backend-api/: .gitignore  Cargo.toml  README.md
backend-api/certs/: readme.md
backend-api/src/: app.rs  auth.rs  err.rs  lib.rs  main.rs  routes.rs  services.rs
backend-api/src/db/: mod.rs  queries.rs  songs.rs  tag_generation.rs  tagging.rs  tags.rs
backend-api/src/db/entity/: applied_tags.rs  mod.rs  prelude.rs  songs.rs  tags.rs
backend-api/src/entity/: majors.rs  mod.rs  prelude.rs  students.rs  users.rs
backend-api/src/models/: metadata.rs  mod.rs  song.rs  sources.rs  tag.rs  tag_generation_model.rs  user_song_attributes.rs
backend-api/src/routes/: metadata.rs  mod.rs  queries.rs  query.rs  songs.rs  students.rs  tag_generation_route.rs  tagging.rs  tags.rs  users.rs
backend-api/src/services/: mod.rs  openai_client.rs  tag_generation_service.rs  tag_normalizer.rs
client-app/: README.md  app.json  global.css  package-lock 2.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client-app/app/: +not-found.tsx  _layout.tsx  index.tsx
client-app/app/(tabs)/: _layout.tsx  explore.tsx  home.tsx  index.tsx  query.tsx  tags.tsx
client-app/app/auth/: index.tsx
client-app/cadenza-client/: .gitignore  CadenzaClient.podspec  README.md  package.json  tsconfig.json  ubrn.config.yaml
client-app/cadenza-client/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
client-app/cadenza-client/crates/hello_world/: Cargo.toml
client-app/cadenza-client/crates/hello_world/src/: lib.rs
client-app/cadenza-client/example/: app.json  index.js  package.json
client-app/cadenza-client/ios/: CadenzaClient.h  CadenzaClient.mm
client-app/cadenza-client/src/: NativeCadenzaClient.ts  index.tsx
client-app/lib/: account.tsx  localdb.ts  supabase.ts
client-app/modules/apple-musickit/: AppleMusicKit.podspec  index.ts  (+2 more)
client-app/modules/apple-musickit-dead/: AppleMusicKit.podspec  app.json  expo-module.config.json  package.json
(+74 files in other folders)
