[package]
name = "cadenza-backend-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50", features = ["full"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
sea-orm = { version = "2.0.0-rc.37", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
dotenvy = "0.15"
