[package]
name = "cadenza-backend-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-server = "0.8.0"
axum-jwt-auth = "0.6.3"
jsonwebtoken = "10.3.0"

serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1.51", features = ["full"] }
sea-orm = { version = "2.0.0-rc.37", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
dotenvy = "0.15"
