[package]
name = "hello_world"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = "0.31"
thiserror = "2.0.17"
rand = "0.10"

[build-dependencies]
uniffi = { version = "0.31.0", features = ["build"] }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
